--- a/node0.toml
+++ b/node0.toml
@@ -6,7 +6,16 @@ port = 30300
 [rpc]
 port = 8540
 apis = ["web3", "eth", "net", "personal", "parity", "parity_set", "traces", "rpc", "parity_accounts"]
+hosts = ["all"]
+interface = "all"
 [ui]
 port = 8180
+interface = "all"
 [websockets]
 port = 8450
+interface = "all"
+[account]
+password = ["node.pwds"]
+[mining]
+engine_signer = "0x00Bd138aBD70e2F00903268F3Db08f2D25677C9e"
+reseal_on_txs = "none"
