--- a/node1.toml
+++ b/node1.toml
@@ -6,9 +6,18 @@ port = 30301
 [rpc]
 port = 8541
 apis = ["web3", "eth", "net", "personal", "parity", "parity_set", "traces", "rpc", "parity_accounts"]
+hosts = ["all"]
+interface = "all"
 [ui]
 port = 8181
+interface = "all"
 [websockets]
 port = 8451
+interface = "all"
 [ipc]
 disable = true
+[account]
+password = ["node.pwds"]
+[mining]
+engine_signer = "0x00Aa39d30F0D20FF03a22cCfc30B7EfbFca597C2"
+reseal_on_txs = "none"
