--- a/node1.toml
+++ b/node1.toml
@@ -1,23 +1,51 @@
 [parity]
-chain = "demo-spec.json"
-base_path = "/tmp/parity1"
+chain = "demo.json"
+base_path = "parity1"
+
+[account]
+unlock = ["0x71be4d6261740d0306da1df97a40f52c7c7e4862"]
+password = ["node.pwds"]
+
 [network]
-port = 30301
+port = 30309
+min_peers = 6
+max_peers = 12
+nat = "any"
+id = 6652
+bootnodes = []
+discovery = true
+warp = true
+allow_ips = "all"
+snapshot_peers = 0
+max_pending_peers = 64
+no_serve_light = false
+reserved_peers="./reservedPeers.enode"
+reserved_only=false
+
 [rpc]
-port = 8541
-apis = ["web3", "eth", "net", "personal", "parity", "parity_set", "traces", "rpc", "parity_accounts"]
-hosts = ["all"]
+port = 8546
 interface = "all"
-[ui]
+cors=["chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn"]
+apis = ["web3", "eth", "pubsub", "net", "parity", "parity_pubsub", "traces", "rpc", "shh", "shh_pubsub"]
+hosts = ["all"]
+
+[websockets]
 port = 8181
 interface = "all"
-[websockets]
-port = 8451
-interface = "all"
+origins = ["none"]
+apis = ["web3", "eth", "pubsub", "net", "parity", "parity_pubsub", "traces", "rpc", "shh", "shh_pubsub"]
+hosts = ["all"]
+
 [ipc]
-disable = true
-[account]
-password = ["node.pwds"]
+disable = false
+path = "$HOME/.local/share/io.parity.ethereum/jsonrpc.ipc"
+apis = ["web3", "eth", "pubsub", "net", "parity", "parity_pubsub", "parity_accounts", "traces", "rpc", "shh", "shh_pubsub"]
+
 [mining]
-engine_signer = "0x00Aa39d30F0D20FF03a22cCfc30B7EfbFca597C2"
-reseal_on_txs = "none"
+author = "0x71be4d6261740d0306da1df97a40f52c7c7e4862"
+engine_signer = "0x71be4d6261740d0306da1df97a40f52c7c7e4862"
+notify_work = ["http://localhost:3002"]
+gas_cap = "6283184"
+tx_gas_limit = "6283184"
+force_sealing = true
+reseal_on_txs = "all"
