--- a/node1.toml
+++ b/node1.toml
@@ -25,7 +25,7 @@ reserved_only=false
 [rpc]
 port = 8546
 interface = "all"
-cors=["chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn"]
+cors=["*"]
 apis = ["web3", "eth", "pubsub", "net", "parity", "parity_pubsub", "traces", "rpc", "shh", "shh_pubsub"]
 hosts = ["all"]
 
