add start & stop

--- a/node0.toml
+++ b/node0.toml
@@ -3,7 +3,6 @@ chain = "demo.json"
 base_path = "parity0"
 
 [account]
-
 unlock = ["0xf848e3f82c239a50d0d800827e281bf7eaf9af7e"]
 password = ["node.pwds"]
 
@@ -21,7 +20,7 @@ snapshot_peers = 0
 max_pending_peers = 64
 no_serve_light = false
 reserved_peers="./reservedPeers.enode"
-reserved_only=false
+reserved_only=true
 
 [rpc]
 port = 8545
@@ -47,5 +46,7 @@ author = "0xf848e3f82c239a50d0d800827e281bf7eaf9af7e"
 engine_signer = "0xf848e3f82c239a50d0d800827e281bf7eaf9af7e"
 notify_work = ["http://localhost:3001"]
 force_sealing = true
-reseal_on_txs = "all"
+reseal_on_txs = "none"
+gas_cap = "6283184"
+tx_gas_limit = "6283184"
 
