--- a/node1.toml
+++ b/node1.toml
@@ -1,6 +1,6 @@
 [parity]
-chain = "demo.json"
-base_path = "parity1"
+chain = "aura.json"
+base_path = "node1"
 
 [account]
 unlock = ["0x71be4d6261740d0306da1df97a40f52c7c7e4862"]
